2010-03-24  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Rename QWebSettings::XSSAuditorEnabled to XSSAuditingEnabled
        https://bugs.webkit.org/show_bug.cgi?id=36522

        For consistency with other QWebSettings attributes.

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        * Api/qwebsettings.h:

2010-03-23  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Calling setView(0) on a QWebPage being shown by a QGraphicsWebView,
        would uninstall the page client, deleting the QGraphicsWebViewPrivate
        instance. If called with an argument, it would do a wrong static_cast
        and crash.

        * Api/qwebpage.cpp:
        (QWebPageWidgetClient::QWebPageWidgetClient):
        (QWebPageWidgetClient::isQWidgetClient):
        (QWebPageWidgetClient::screenNumber):
        (QWebPage::QWebPage):
        (QWebPage::setView):
        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::unsetPageIfExists):
        (QGraphicsWebView::setPage):
        * Api/qwebpage.cpp:
        (QWebPageWidgetClient::isQWidgetClient):
        (QWebPageWidgetClient::screenNumber):
        (QWebPage::QWebPage):
        (QWebPage::setView):
        * Api/qwebpage.h:
        * Api/qwebview.cpp:
        (QWebViewPrivate::unsetPageIfExists):
        (QWebView::setPage):

2010-03-24  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Make Icon::createIconForFiles() optional.
        https://bugs.webkit.org/show_bug.cgi?id=35072

        - Rename iconForFiles() to chooseIconForFiles().
        - Call Icon::createIconForFiles() from chooseIconForFiles().

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::chooseIconForFiles):
        * WebCoreSupport/ChromeClientQt.h:

2010-03-23  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.
